# 3DSmoothNet

./: CMakeLists.txt  LICENSE  README.md  demo.py  install_pcl.sh  main.cpp  main_cnn.py  requirements.txt
core/: architecture.py  config.py  core.cpp  core.h  logger.py  loss.py  network.py  ops.py  saveDataToTFrecordsExample.py
data/demo/: cloud_bin_0.ply  cloud_bin_0_keypoints.txt  cloud_bin_1.ply  cloud_bin_1_keypoints.txt
evaluation/: clusterCallback.m  correspondenceMatching.m  evaluate3DMatchDataset.m  register2Fragments.m  runFragmentRegistration.m
models/16_dim/: 3DSmoothNet_16_dim.ckpt.index
models/32_dim/: 3DSmoothNet_32_dim.ckpt.index  checkpoint
models/64_dim/: 3DSmoothNet_64_dim.ckpt.index
